# rag-lab

./: .env.example  00-merge_ddu_documents.ipynb  AGENT_CHAT_UI_STRUCTURED_OUTPUT_FILTERING.md  ANSWER_GENERATION_PROCESS_FLOW.md  DDOKDDAK_ENTITY_FILTER_IMPROVEMENT_PLAN.md  DDOKDDAK_ENTITY_MENTION_PLAN.md  DDOKDDAK_ENTITY_TRANSPLANT_PLAN.md  DDOKDDAK_FILTER_IMPROVEMENT_PLAN_V2.md  DIRECT_RESPONSE_WEB_SEARCH_ENHANCEMENT.md  DOCUMENT_SCHEMA_SYNTHESIS.md  ENHANCED_PROBLEM_ANALYSIS.md  ENTITY_ANALYSIS_REPORT.md  GOOGLE_SEARCH_IMPLEMENTATION_PLAN.md  GOOGLE_SEARCH_IMPLEMENTATION_SUCCESS.md  GOOGLE_SEARCH_USAGE.md  HUMAN_FEEDBACK_INTEGRATION_PLAN.md  LANGGRAPH_API_GUIDE.md  LANGGRAPH_CHAT_UI_STREAMING_GUIDE.md  PAGE_IMAGE_UX_IMPROVEMENT_RECOMMENDATIONS.md  PROBLEM_ANALYSIS_REPORT.md  PROJECT_ARCHITECTURE_DEEPDIVE_2025.md  PROJECT_DEEP_ANALYSIS.md  PROJECT_DEEP_ANALYSIS_20250118.md  README_DOCKER.md  REFINED_FIX_PLAN_V3.md  SYNTHESIS_ANSWER_GENERATION_PROCESS.md  SYNTHESIS_SCHEMA_ENHANCEMENT_PLAN.md  SYNTHESIS_SCHEMA_GAP_ANALYSIS.md  WORKFLOW_ENHANCEMENT_PLAN.md  WORKFLOW_STATE_TRANSITIONS.md  WORKFLOW_TOOLS_DEEP_ANALYSIS.md  api_graph.py  docker-compose.yml  env_config_changes.md  langgraph.json  langgraph_api_client.py  langgraph_server.py  mvp_prd.md  project_analysis_report.md  project_architecture_deepdive.md  (+8 more)
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
docker/: docker-compose.yml  init-db.sql
ingest/: __init__.py  database.py  embeddings.py  loader.py  models.py  pdf_to_image.py
retrieval/: __init__.py  hybrid_search.py  search_filter.py
screenshot/: console_log_250829.txt
scripts/: 0_convert_pdf_to_images.py  (+80 more)
(+26 files in other folders)
